--- a/src/index.css
+++ b/src/index.css
@@ -66,8 +66,7 @@ html {
 
 body {
   background: var(--backgroundColor);
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
-    Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: "Helvetica Neue", sans-serif;
   font-weight: 400;
   line-height: 1;
   color: var(--textColor);
@@ -257,3 +256,81 @@ ul {
 PROJECT CSS 
 =============== 
 */
+body {
+  background: var(--primary-500);
+}
+/* 
+============= 
+Navbar
+=============== 
+*/
+nav {
+  height: 5rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.nav-center {
+  width: var(--fixed-width);
+  max-width: var(--max-width);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.logo {
+  text-transform: uppercase;
+  color: var(--white);
+  letter-spacing: 5px;
+  font-weight: 300;
+}
+.toggle-btn {
+  width: 2rem;
+  height: 2rem;
+  background: var(--white);
+  color: var(--primary-700);
+  border-radius: var(--borderRadius);
+  border-color: transparent;
+  transition: var(--transition);
+  cursor: pointer;
+}
+.toggle-btn:hover {
+  transform: scale(1.1);
+}
+/* 
+============= 
+Hero
+=============== 
+*/
+.hero-container {
+  min-height: calc(100vh - 5rem);
+  display: grid;
+  place-items: center;
+}
+.hero-center {
+  color: var(--white);
+  width: var(--fixed-width);
+  max-width: var(--max-width);
+}
+.hero-center h1 {
+  font-size: clamp(3rem, 5vw, 5rem);
+  margin-bottom: 1rem;
+  font-weight: 100;
+  line-height: 1.1;
+}
+.hero-center p {
+  line-height: 1.5;
+  letter-spacing: 1px;
+}
+
+@media screen and (min-width: 992px) {
+  .hero-center {
+    text-align: center;
+  }
+  .hero-center p {
+    max-width: 35em;
+    margin: 0 auto;
+  }
+  .toggle-btn {
+    display: none;
+  }
+}
