--- a/src/index.css
+++ b/src/index.css
@@ -271,7 +271,7 @@ nav {
   justify-content: center;
 }
 .nav-center {
-  width: var(--fixed-width);
+  width: var(--fluid-width);
   max-width: var(--max-width);
   display: flex;
   justify-content: space-between;
@@ -402,5 +402,38 @@ Sidebar
 @media screen and (min-width: 992px) {
   .sidebar {
     display: none;
+  }
+}
+
+/* 
+============= 
+Nav Links
+=============== 
+*/
+.nav-links {
+  display: none;
+}
+
+@media screen and (min-width: 992px) {
+  .nav-links {
+    display: flex;
+    justify-content: center;
+    border: 2px solid red;
+  }
+  .nav-center {
+    display: grid;
+    grid-template-columns: auto 1fr;
+    border: 2px solid yellow;
+  }
+  .nav-link {
+    padding: 0 1rem;
+    color: var(--white);
+    background: transparent;
+    border-color: transparent;
+    font-size: 1.25rem;
+    text-transform: uppercase;
+    letter-spacing: normal;
+    cursor: pointer;
+    border: 2px solid #6fece1;
   }
 }
