--- a/src/index.css
+++ b/src/index.css
@@ -418,12 +418,12 @@ Nav Links
   .nav-links {
     display: flex;
     justify-content: center;
-    border: 2px solid red;
+    align-self: stretch;
   }
   .nav-center {
+    align-self: stretch;
     display: grid;
     grid-template-columns: auto 1fr;
-    border: 2px solid yellow;
   }
   .nav-link {
     padding: 0 1rem;
@@ -434,7 +434,6 @@ Nav Links
     text-transform: uppercase;
     letter-spacing: normal;
     cursor: pointer;
-    border: 2px solid #6fece1;
   }
 }
 
